tests/analyzer/fail/duplicate-symbol-two-unique.api
// expected: 1005

type func1 = struct { a: u32 };
type func1 = struct { a: u32 };
